# comparator

./: Cargo.toml  README.md  io.github.WojtekWidomski.comparator.json  meson.build
.github/workflows/: ci.yml  main.yml
data/: comparator.gresource.xml  io.github.WojtekWidomski.comparator.appdata.xml.in  io.github.WojtekWidomski.comparator.desktop.in  io.github.WojtekWidomski.comparator.gschema.xml  meson.build
data/ui/: about_dialog.ui  add_server_dialog.ui  help-overlay.ui  preferences_window.ui  server_info_page.ui  server_listbox_row.css  server_listbox_row.ui  window.ui
po/: POTFILES  meson.build  pl.po
src/: api.py  application.rs  comparator.in  infopage.py  main.py  main.rs  meson.build  preferences_window.py  server.py  server.rs  server_listbox_row.py  server_manager.py  settings.py  text_formatting.py  window.py  window.rs
